Fix fit to screen size behaviour on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,13 @@ label {
 
 html {
   font-size: 16px;
-  height: 100%;
+  height: 100vh;
+  height: 100dvh;
   overflow: hidden;
+
+  @media only screen and (max-width: 768px) {
+    overflow: visible;
+  }
 }
 
 :root:has(.lightTheme) {
@@ -139,6 +144,7 @@ input[type='range'] {
 
 #root {
   height: 100vh;
+  height: 100dvh;
   display: grid;
   grid-template-columns: clamp(300px, 20vw, 450px) 1fr;
   grid-template-rows: auto 1fr auto;
